--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "meme-generator",
   "version": "1.0.0",
-  "description": "",
+  "description": "meme-generator",
   "main": "src/index.js",
   "jest": {
     "setupFilesAfterEnv": [
@@ -25,6 +25,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dom-to-image": "^2.6.0",
+    "file-saver": "^2.0.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
